--- a/hu_wuhu_71.adoc
+++ b/hu_wuhu_71.adoc
@@ -17,7 +17,7 @@ summary: Describes how to use the Windows Unified Host Utilities 7.1 with ONTAP
 [.lead]
 Windows Unified Host Utilities includes an installation program that sets the required Windows registry and HBA parameters so that the Windows host correctly handles the storage system behaviors for NetApp ONTAP and E-Series platforms.
 
-When you install the Host Utilities software, the installer sets required Windows registry and HBA parameters.
+When you install the Host Utilities software, the installer sets, required Windows registry and HBA parameters.
 
 The following programs and files are installed on the Windows host computer. The default directory is `C:\Program Files\NetApp\Windows Host Utilities`.
 
