--- a/nvme_ol_83.adoc
+++ b/nvme_ol_83.adoc
@@ -23,14 +23,18 @@ include::_include/hu/reuse_hu_cloud_note.adoc[]
 == Features
 
 * Oracle Linux 8.3 has In-kernel NVMe multipath enabled by default for NVMe namepsaces.
+
 * With Oracle Linux 8.3, nvme-fc auto-connect scripts are included in the native nvme-cli package. So one may rely on these native auto-connect scripts itself instead of having to install the external vendor provided outbox auto-connect scripts.
+
 * With Oracle Linux 8.3, a native udev rule is already provided as part of the nvme-cli package which enables round-robin load balancing for NVMe multipath. So one need not manually create this rule any more .
+
 * With Oracle Linux 8.3, both NVMe & SCSI traffic can be run on the same co-existent host. In fact, that is expected to be the commonly deployed host config for customers. So for SCSI, one may configure dm-multipath as usual for SCSI LUNs resulting in mpath devices, whereas NVMe multipath may be used to configure NVMe-oF multipath devices (i.e. /dev/nvmeXnY) on the host.
+
 * With Oracle Linux 8.3, the NetApp plugin in the native nvme-cli is capable of displaying ONTAP details as well for ONTAP namespaces.
 
 == Configuration requirements
 
-Refer to the http://mysupport.netapp.com/matrix3[NetApp InterOperability Matrix (IMT)] for exact details regarding supported configs and current list of supported configurations.
+Refer to the http://mysupport.netapp.com/matrix3[NetApp InterOperability Matrix (IMT)^] for exact details regarding supported configs and current list of supported configurations.
 
 == Enable NVMe/FC with Oracle Linux 8.3
 
@@ -84,11 +88,11 @@ _}
 
 . Restart the multipathd daemon by running a _systemctl restart multipathd_ to let the new setting take effect.
 
-==  Configuring the Broadcom FC adapter for NVMe/FC
+==  Configure the Broadcom FC adapter for NVMe/FC
  
 .Steps
 
-. Verify that you are using the supported adapter. For the most current list of supported adapters, see the https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix].
+. Verify that you are using the supported adapter. For the most current list of supported adapters, see the https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^].
 
 +
 ----
@@ -103,8 +107,8 @@ _Emulex LPe36002-M64 2-Port 64Gb Fibre Channel Adapter +
 Emulex LPe36002-M64 2-Port 64Gb Fibre Channel Adapter_
 ----
 
-. Verify that you are using the recommended Broadcom lpfc firmware & inbox driver. For the most current list of supported adapter driver & firmware versions, see the https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix].
-
+. Verify that you are using the recommended Broadcom lpfc firmware & inbox driver. For the most current list of supported adapter driver & firmware versions, see the https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^].
++
 ----
 # *cat /sys/class/scsi_host/host*/fwrev* +
 _12.8.351.49, sli-4:6:d +
@@ -168,7 +172,7 @@ abort 0000025a noxri 00000000 nondlp 00000000 qdepth 00000000 wqerr 00000000 err
 FCP CMPL: xb 00000c89 Err 0000cd87
 ----
 
-=== Enabling 1MB I/O size
+=== Enable 1MB I/O size
 
 .Steps
 
@@ -189,7 +193,7 @@ _options lpfc lpfc_sg_seg_cnt=256_
 _256_
 ----
 
-== Configuring the Marvell/QLogic FC Adapter for NVMe/FC
+== Configure the Marvell/QLogic FC Adapter for NVMe/FC
 
 .Steps
 
@@ -234,29 +238,30 @@ _round-robin_
 
 +
 ----
-# *nvme list* +
-_Node SN Model Namespace Usage Format FW Rev +
----------------- -------------------- ---------------------------------------- --------- -------------------------- ---------------- -------- +
-/dev/nvme0n1 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 1 37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF +
-/dev/nvme0n10 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 10 37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF +
-/dev/nvme0n11 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 11 37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF +
-/dev/nvme0n12 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 12 37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF +
-/dev/nvme0n13 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 13 37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF +
-/dev/nvme0n14 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 14 37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF +
-/dev/nvme0n15 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 15 37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF +
-/dev/nvme0n16 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 16 37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF +
-/dev/nvme0n17 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 17 37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF +
-/dev/nvme0n18 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 18 37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF +
-/dev/nvme0n19 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 19 37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF +
-/dev/nvme0n2 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 2 37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF +
-/dev/nvme0n20 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 20 37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF +
-/dev/nvme0n3 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 3 37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF +
-/dev/nvme0n4 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 4 37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF +
-/dev/nvme0n5 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 5 37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF +
-/dev/nvme0n6 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 6 37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF +
-/dev/nvme0n7 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 7 37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF +
-/dev/nvme0n8 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 8 37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF +
-/dev/nvme0n9 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 9 37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF_
+# nvme list
+Node         SN                   Model                  Namespace Usage              Format FW Rev
+---------------- -------------------- ---------------------------------------- --------- ------------------
+/dev/nvme0n1 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 1        37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF
+/dev/nvme0n10 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 10      37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF
+/dev/nvme0n11 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 11      37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF
+/dev/nvme0n12 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 12      37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF
+/dev/nvme0n13 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 13      37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF
+/dev/nvme0n14 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 14      37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF
+/dev/nvme0n15 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 15      37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF
+/dev/nvme0n16 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 16      37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF
+/dev/nvme0n17 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 17      37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF
+/dev/nvme0n18 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 18      37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF
+/dev/nvme0n19 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 19      37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF
+/dev/nvme0n2 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 2        37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF
+/dev/nvme0n20 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 20      37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF
+/dev/nvme0n3 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 3        37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF
+/dev/nvme0n4 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 4        37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF
+/dev/nvme0n5 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 5        37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF
+/dev/nvme0n6 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 6        37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF
+/dev/nvme0n7 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 7        37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF
+/dev/nvme0n8 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 8        37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF
+/dev/nvme0n9 81Ec-JRMlkL9AAAAAAAB NetApp ONTAP Controller 9        37.58 GB / 37.58 GB 4 KiB + 0 B FFFFFFFF
+
 ----
 
 . Verify that the controller state of each path is live and have proper ANA status
@@ -301,7 +306,7 @@ _Device Vserver Namespace Path NSID UUID Size
 +
 ----
 . # *nvme netapp ontapdevices -o json* +
-_\{ +
+{ 
 "ONTAPdevices" : [ +
 \{ +
 "Device" : "/dev/nvme0n1", +
@@ -358,35 +363,54 @@ _\{ +
 
 == Troubleshooting
 
-Before commencing any troubleshooting for any NVMe/FC failures, always ensure you are running a config that is compliant to the IMT specifications. And then proceed to the next steps below to debug any host side issues here.
+Before commencing any troubleshooting for any NVMe/FC failures, make sure that you are running a configuration that is compliant to the IMT specifications and then proceed with the next steps to debug any host side issues.
 
-=== lpfc verbose logging
+=== LPFC verbose logging
 
-Given below is the list of lpfc driver logging bitmasks available for NVMe/FC, as seen at drivers/scsi/lpfc/lpfc_logmsg.h: 
+.Steps
 
-_#define LOG_NVME 0x00100000 /* NVME general events. */_ +
-_#define LOG_NVME_DISC 0x00200000 /* NVME Discovery/Connect events. */_ +
-_#define LOG_NVME_ABTS 0x00400000 /* NVME ABTS events. */_ +
-_#define LOG_NVME_IOERR 0x00800000 /* NVME IO Error events. */_ 
+. You can set the `lpfc_log_verbose` driver setting to any of the following values to log NVMe/FC events:
++
+----
 
-So you may set the lpfc_log_verbose driver setting (appended to the lpfc line at /etc/modprobe.d/lpfc.conf) to any of the values above for logging NVMe/FC events from a lpfc driver perspective. And then recreate the initiramfs by running 'dracut -f' and then reboot the host. After rebooting, verify that the verbose logging has applied by checking the following, using the above LOG_NVME_DISC bitmask as an example: 
+#define LOG_NVME 0x00100000 /* NVME general events. */ 
+#define LOG_NVME_DISC 0x00200000 /* NVME Discovery/Connect events. */ 
+#define LOG_NVME_ABTS 0x00400000 /* NVME ABTS events. */ 
+#define LOG_NVME_IOERR 0x00800000 /* NVME IO Error events. */ 
 
-_# *cat /etc/modprobe.d/lpfc.conf*_ +
-_lpfc_enable_fc4_type=3 lpfc_log_verbose=0xf00083_ 
+----
++
+. After setting any of these values, run `dracut-f` command to recreate the `initramfs` and reboot the host.
 
-_# *cat /sys/module/lpfc/parameters/lpfc_log_verbose*_ +
-_15728771_
+. After rebooting, verify the settings:
++
+----
+# cat /etc/modprobe.d/lpfc.conf 
+options lpfc lpfc_log_verbose=0xf00083 
 
+
+# cat /sys/module/lpfc/parameters/lpfc_log_verbose 
+15728771 
+----
 
 === qla2xxx verbose logging
 
-Unfortunately, there is no similar specific qla2xxx logging for NVMe/FC, as there is in lpfc. So you may set the general qla2xxx logging level here i.e. ql2xextended_error_logging=0x1e400000. This can be done by appending this value to the corresponding modprobe qla2xxx conf file. And then recreate the initramfs by running 'dracut -f' and then reboot the host. After reboot, verify that the verbose logging has applied as follows:
+There is no similar specific qla2xxx logging for NVMe/FC as for lpfc driver. Therefore, you may set the general qla2xxx logging level using the following steps:
 
-_# *cat /etc/modprobe.d/qla2xxx.conf*_ +
-_options qla2xxx ql2xnvmeenable=1_ _ql2xextended_error_logging=0x1e400000_
+.Steps
 
-_# *cat /sys/module/qla2xxx/parameters/ql2xextended_error_logging*_ +
-_507510784_
+. Append the `ql2xextended_error_logging=0x1e400000` value to the corresponding `modprobe qla2xxx conf` file.
+
+. Recreate the `initramfs` by running `dracut -f` command and then reboot the host.
+
+. After reboot, verify that the verbose logging has been applied as follows:
++
+----
+# cat /etc/modprobe.d/qla2xxx.conf
+options qla2xxx ql2xnvmeenable=1 ql2xextended_error_logging=0x1e400000
+# cat /sys/module/qla2xxx/parameters/ql2xextended_error_logging
+507510784
+----
 
 == Known issues 
 
