--- a/nvme_aix.adoc
+++ b/nvme_aix.adoc
@@ -15,15 +15,15 @@ summary: How to Configure NVMe/FC Host for AIX with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-You can enable NVMe/FC on IBM AIX and VIOS/PowerVM hosts using ONTAP storage as the target. For additional details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^].
+You can enable NVMe over Fibre Channel (NVMe/FC) on IBM AIX and VIOS/PowerVM hosts using ONTAP storage as the target. For additional details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^].
 
 The following support is available for NVMe/FC host configuration for an AIX host with ONTAP:
 
-* Beginning with ONTAP 9.13.1, NVMe over Fibre Channel (NVMe/FC) support is added for IBM AIX 7.2 TL5 SP6, AIX 7.3 TL1 SP2 and VIOS 3.1.4.21 releases with SAN boot support for both physical and virtual stacks. See the IBM documentation for more information on setting up SAN boot support.
+* Beginning with ONTAP 9.13.1, NVMe/FC support is added for IBM AIX 7.2 TL5 SP6, AIX 7.3 TL1 SP2, and VIOS 3.1.4.21 releases with SAN boot support for both physical and virtual stacks. See the IBM documentation for more information on setting up SAN boot support.
 
-* NVMe/FC is supported only with Power9 and Power10 IBM servers.
+* NVMe/FC is supported with Power9 and Power10 IBM servers.
 
-* No separate PCM (Path Control Module), such as HUK for AIX SCSI MPIO support, is required for the NVMe devices.
+* No separate PCM (Path Control Module), such as Host Utilities for AIX SCSI Microsoft Multipath I/O (MPIO) support, is required for NVMe devices.
 
 * Virtualization support with NetApp (VIOS/PowerVM) is introduced with VIOS 3.1.4.21. This is _only_ supported through NPIV (N_PortID Virtualization) storage virtualization mode using the Power10 IBM server.
 
@@ -32,13 +32,13 @@ The following support is available for NVMe/FC host configuration for an AIX hos
 
 * Verify that you have 32GB FC Emulex adapters (EN1A, EN1B, EN1L, EN1M) or 64GB FC adapters (EN1N, EN1P) with adapter firmware 12.4.257.30 and later versions.
 
-* If you have a MetroCluster configuration, NetApp recommends changing AIX NVMe/FC default APD (All Path Down) time for supporting MetroCluster Unplanned Switchover events to avoid the AIX operating system enforcing a shorter I/O timeout. For additional information and the recommended changes to default settings, refer to the public report 1553249.
+* If you have a MetroCluster configuration, NetApp recommends changing the AIX NVMe/FC default APD (All Path Down) time for supporting MetroCluster unplanned switchover events to avoid the AIX operating system enforcing a shorter I/O timeout. For additional information and the recommended changes to default settings, refer to public report 1553249.
 
-* By default, the ANATT value for the AIX host OS is 30 seconds. IBM provides an Interim Fix (ifix) which caps the ANATT value at 60 seconds; you need to install an ifix from the IBM website to ensure that all the ONTAP workflows are non-disruptive.. 
+* By default, the Asymmetric Namespace Access Transition Timeout (ANATT) value for the AIX host OS is 30 seconds. IBM provides an Interim Fix (ifix) which caps the ANATT value at 60 seconds; you need to install an ifix from the IBM website to ensure that all the ONTAP workflows are non-disruptive.. 
 +
 
 [NOTE]
-For NVMe/FC AIX support, you need install an ifix on the GA versions of AIX OS. This is not required for the VIOS/PowerVM OS.
+For NVMe/FC AIX support, you must install an ifix on the GA versions of AIX OS. This is not required for the VIOS/PowerVM OS.
 
 +
 
@@ -53,7 +53,7 @@ For more information on managing ifixes, see link:http://www-01.ibm.com/support/
 [NOTE] 
 You need to install the ifixes on an AIX version with no previously installed ifixes related to `devices.pciex.pciexclass.010802.rte` on the system. If these ifixes are present, they will conflict with the new installation.
 +
-The following table demonstrates HBAs assigned to the AIX LPAR (AIX Logical Partition) or the physical/native stack in a non-virtualized mode:
+The following table demonstrates HBAs assigned to the AIX LPAR (AIX Logical Partition) or the physical or virtual stack in a non-virtualized mode:
 +
 [cols="10,10,10,10,10",options="header"]
 |===
