--- a/_include/hu/reuse_hu_recommended_settings.adoc
+++ b/_include/hu/reuse_hu_recommended_settings.adoc
@@ -1,8 +1,8 @@
 The `multipath.conf` file must exist for the multipath daemon to start, but you can create an empty, zero-byte file by using the following command:
 
-`touch /etc/multipath.conf`.
+`touch /etc/multipath.conf`
 
-The first time you create this file, you might need to enable and start the multipath services.
+The first time you create this file, you might need to enable and start the multipath services:
 
 ----
 # systemctl enable multipathd
@@ -11,9 +11,8 @@ The first time you create this file, you might need to enable and start the mult
 
 * There is no requirement to add anything directly to the `multipath.conf` file, unless you have devices that you do not want to be managed by multipath or you have existing settings that override defaults.
 
-* To exclude unwanted devices, you can add the following syntax to the `multipath.conf` file .
+* To exclude unwanted devices, add the following syntax to the `multipath.conf` file .
 
-** Replace the `<DevId>` with the `WWID` string of the device you want to exclude:
 +
 ----
 blacklist {
@@ -23,6 +22,7 @@ blacklist {
         devnode "^cciss.*"
 }
 ----
+Replace the `<DevId>` with the `WWID` string of the device you want to exclude.
 
 .Example
 In this example, `sda` is the local SCSI disk that we need to add to the blacklist.
@@ -36,7 +36,7 @@ In this example, `sda` is the local SCSI disk that we need to add to the blackli
 360030057024d0730239134810c0cb833
 ----
 
-. Add the `WWID` to the blacklist stanza in the `/etc/multipath.conf`:
+. Add the `WWID` to the blacklist stanza in `/etc/multipath.conf`:
 +
 ----
 blacklist {
@@ -47,6 +47,6 @@ blacklist {
 }
 ----
 
-You should always check your `/etc/multipath.conf` file for legacy settings, especially in the defaults section, that may be overriding the default settings.
+You should always check your `/etc/multipath.conf` file for legacy settings, especially in the defaults section, that might be overriding the default settings.
 
 The following table demonstrates the critical `multipathd` parameters for ONTAP LUNs and the required values. If a host is connected to LUNs from other vendors and any of these parameters are overridden, they will need to be corrected by later stanzas in the `multipath.conf` file that apply specifically to ONTAP LUNs. If this is not done, the ONTAP LUNs might not work as expected. These defaults should only be overridden in consultation with NetApp and/or an OS vendor and only when the impact is fully understood.
